--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@ body{
 	margin-top: -200px;
 	margin-left: -200px;
 	border-radius: 4px;
-	box-shadow: 1px 2px 10px 0 rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+	box-shadow: 1px 2px 30px 0 rgba(255, 255, 255, 0.3);
 	overflow: hidden;
 	background: #3fafbc;
 	color: transparent;
